// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarContent when 7 days tab is selected renders a component with top pages for 7 days, and top downloads for 7 days 1`] = `
<DocumentFragment>
  <section
    class="sidebar"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="sidebar__tab-select__button-group usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r1:0"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r1:0"
          role="tab"
        >
          <a
            aria-label="30 mins"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 mins
          </a>
        </li>
        <li
          aria-controls="panel:r1:1"
          aria-disabled="false"
          aria-selected="true"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0 react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r1:1"
          role="tab"
          tabindex="0"
        >
          <a
            aria-label="7 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            7 days
          </a>
        </li>
        <li
          aria-controls="panel:r1:2"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r1:2"
          role="tab"
        >
          <a
            aria-label="30 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 days
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r1:0"
        class="react-tabs__tab-panel"
        id="panel:r1:0"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r1:1"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r1:1"
        role="tabpanel"
      >
        <div
          class="bg-light-gray border-top-width-0 border-05 border-gray-5"
        >
          <ul
            class="usa-card-group padding-2"
          >
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <div
                  class="chart__title"
                >
                  <a
                    href="/definitions#report_realtime_top_pages"
                  >
                    Top 30 Web Pages and App Screens
                  </a>
                  <span
                    class="usa-tooltip"
                  >
                    <span
                      aria-describedby="tooltip-550000"
                      class="usa-tooltip__trigger"
                      data-position="top"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#info"
                        />
                      </svg>
                    </span>
                    <span
                      aria-hidden="true"
                      class="usa-tooltip__body"
                      id="tooltip-550000"
                      role="tooltip"
                    >
                      The top webpages and/or applications based on the number of sessions for the page or hostname.
                    </span>
                  </span>
                </div>
                <section
                  class="sidebar__tab__content"
                >
                  <p
                    class="margin-y-1"
                  >
                    Sessions over the last week on 
                    <strong>
                      hostnames
                    </strong>
                    , including traffic to all web pages and app screens within that hostname.
                  </p>
                  <p
                    class="margin-top-05 margin-bottom-105"
                  >
                    <a
                      aria-label="top-domains-7-days.csv"
                      href="http://www.example.com/data//top-domains-7-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure
                    data-source="http://www.example.com/data//top-domains-7-days.json"
                  >
                    <div
                      class="data chart__bar-chart text--lowercase margin-top-1"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-downloads"
                >
                  <div
                    class="top-downloads__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_downloads"
                      >
                        Top 20 Downloads Last 7 Days
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top files downloaded across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports.
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Top file downloads over the last week on Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-downloads-7-days.csv"
                      href="http://www.example.com/data//top-downloads-7-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure
                    class="top-downloads__bar-chart"
                  >
                    <div
                      class="data chart__bar-chart text--capitalize margin-top-2"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-video-plays"
                >
                  <div
                    class="top-video-plays__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_video_plays"
                      >
                        Top Video Plays Last 7 Days
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top videos played across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Video play data is unavailable for Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-video-plays-7-days.csv"
                      href="http://www.example.com/data//top-video-plays-7-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <div />
                </section>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-labelledby="tab:r1:2"
        class="react-tabs__tab-panel"
        id="panel:r1:2"
        role="tabpanel"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`SidebarContent when 30 days tab is selected renders a component with top pages for 30 days, and top downloads for 30 days 1`] = `
<DocumentFragment>
  <section
    class="sidebar"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="sidebar__tab-select__button-group usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r2:0"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r2:0"
          role="tab"
        >
          <a
            aria-label="30 mins"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 mins
          </a>
        </li>
        <li
          aria-controls="panel:r2:1"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r2:1"
          role="tab"
        >
          <a
            aria-label="7 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            7 days
          </a>
        </li>
        <li
          aria-controls="panel:r2:2"
          aria-disabled="false"
          aria-selected="true"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0 react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r2:2"
          role="tab"
          tabindex="0"
        >
          <a
            aria-label="30 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 days
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r2:0"
        class="react-tabs__tab-panel"
        id="panel:r2:0"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r2:1"
        class="react-tabs__tab-panel"
        id="panel:r2:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r2:2"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r2:2"
        role="tabpanel"
      >
        <div
          class="bg-light-gray border-top-width-0 border-05 border-gray-5"
        >
          <ul
            class="usa-card-group padding-2"
          >
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <div
                  class="chart__title"
                >
                  <a
                    href="/definitions#report_realtime_top_pages"
                  >
                    Top 30 Web Pages and App Screens
                  </a>
                  <span
                    class="usa-tooltip"
                  >
                    <span
                      aria-describedby="tooltip-550000"
                      class="usa-tooltip__trigger"
                      data-position="top"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#info"
                        />
                      </svg>
                    </span>
                    <span
                      aria-hidden="true"
                      class="usa-tooltip__body"
                      id="tooltip-550000"
                      role="tooltip"
                    >
                      The top webpages and/or applications based on the number of sessions for the page or hostname.
                    </span>
                  </span>
                </div>
                <section
                  class="sidebar__tab__content"
                >
                  <p
                    class="margin-y-1"
                  >
                    Sessions over the last month on 
                    <strong>
                      hostnames
                    </strong>
                    , including traffic to all web pages and app screens within that hostname.
                  </p>
                  <p
                    class="margin-top-05 margin-bottom-105"
                  >
                    <a
                      aria-label="top-100000-domains-30-days.csv"
                      href="http://www.example.com/data//top-100000-domains-30-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure
                    data-source="http://www.example.com/data//top-domains-30-days.json"
                  >
                    <div
                      class="data chart__bar-chart text--lowercase margin-top-1"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-downloads"
                >
                  <div
                    class="top-downloads__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_downloads"
                      >
                        Top 20 Downloads Last 30 Days
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top files downloaded across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports.
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Top file downloads over the last month on Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-downloads-30-days.csv"
                      href="http://www.example.com/data//top-downloads-30-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure
                    class="top-downloads__bar-chart"
                  >
                    <div
                      class="data chart__bar-chart text--capitalize margin-top-2"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-video-plays"
                >
                  <div
                    class="top-video-plays__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_video_plays"
                      >
                        Top Video Plays Last 30 Days
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top videos played across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Video play data is unavailable for Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-video-plays-30-days.csv"
                      href="http://www.example.com/data//top-video-plays-30-days.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <div />
                </section>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SidebarContent when 30 minutes tab is selected renders a component with top pages realtime, and top downloads yesterday 1`] = `
<DocumentFragment>
  <section
    class="sidebar"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="sidebar__tab-select__button-group usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r0:0"
          aria-disabled="false"
          aria-selected="true"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0 react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r0:0"
          role="tab"
          tabindex="0"
        >
          <a
            aria-label="30 mins"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 mins
          </a>
        </li>
        <li
          aria-controls="panel:r0:1"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r0:1"
          role="tab"
        >
          <a
            aria-label="7 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            7 days
          </a>
        </li>
        <li
          aria-controls="panel:r0:2"
          aria-disabled="false"
          aria-selected="false"
          class="sidebar__tab-select__button-group__item usa-button-group__item margin-0"
          data-rttab="true"
          id="tab:r0:2"
          role="tab"
        >
          <a
            aria-label="30 days"
            class="sidebar__tab-select__button usa-button section__headline padding-y-2"
          >
            30 days
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r0:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r0:0"
        role="tabpanel"
      >
        <div
          class="bg-light-gray border-top-width-0 border-05 border-gray-5"
        >
          <ul
            class="usa-card-group padding-2"
          >
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <div
                  class="chart__title"
                >
                  <a
                    href="/definitions#report_realtime_top_pages"
                  >
                    Top 30 Web Pages and App Screens
                  </a>
                  <span
                    class="usa-tooltip"
                  >
                    <span
                      aria-describedby="tooltip-550000"
                      class="usa-tooltip__trigger"
                      data-position="top"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#info"
                        />
                      </svg>
                    </span>
                    <span
                      aria-hidden="true"
                      class="usa-tooltip__body"
                      id="tooltip-550000"
                      role="tooltip"
                    >
                      The top webpages and/or applications based on the number of sessions for the page or hostname.
                    </span>
                  </span>
                </div>
                <section
                  class="sidebar__tab__content"
                >
                  <p
                    class="margin-y-1"
                  >
                    <strong>
                      Users
                    </strong>
                     on a 
                    <strong>
                      single, specific page or app screen
                    </strong>
                     in the last 30 minutes. Hostnames are not currently reported in real-time, so only page title and screen name information is available.
                  </p>
                  <p
                    class="margin-top-05 margin-bottom-105"
                  >
                    <a
                      aria-label="top-pages-realtime.csv"
                      href="http://www.example.com/data//top-pages-realtime.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure>
                    <div
                      class="data chart__bar-chart text--capitalize margin-top-1"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12 padding-bottom-2"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-downloads"
                >
                  <div
                    class="top-downloads__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_downloads"
                      >
                        Top 20 Downloads Yesterday
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top files downloaded across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports.
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Top file downloads yesterday on Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-downloads-yesterday.csv"
                      href="http://www.example.com/data//top-downloads-yesterday.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <figure
                    class="top-downloads__bar-chart"
                  >
                    <div
                      class="data chart__bar-chart text--capitalize margin-top-2"
                    />
                  </figure>
                </section>
              </div>
            </li>
            <li
              class="usa-card grid-col-12"
            >
              <div
                class="usa-card__container padding-2 border-0"
              >
                <section
                  class="top-video-plays"
                >
                  <div
                    class="top-video-plays__headline"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        href="/definitions#report_top_video_plays"
                      >
                        Top Video Plays Yesterday
                      </a>
                      <span
                        class="usa-tooltip"
                      >
                        <span
                          aria-describedby="tooltip-550000"
                          class="usa-tooltip__trigger"
                          data-position="top"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="usa-icon margin-bottom-neg-05 margin-left-05"
                            focusable="false"
                            role="img"
                          >
                            <use
                              xlink:href="/assets/uswds/img/sprite.svg#info"
                            />
                          </svg>
                        </span>
                        <span
                          aria-hidden="true"
                          class="usa-tooltip__body"
                          id="tooltip-550000"
                          role="tooltip"
                        >
                          Top videos played across all DAP participating government publicly-available websites. Updated daily for the yesterday, last 7 days, and last 30 days aggregate reports
                        </span>
                      </span>
                    </h3>
                  </div>
                  <p
                    class="text--normal margin-top-neg-1 margin-bottom-0"
                  >
                    <em>
                      Video play data is unavailable for Department of Interior hostnames.
                    </em>
                  </p>
                  <p
                    class="margin-top-1 margin-bottom-0"
                  >
                    <a
                      aria-label="top-video-plays-yesterday.csv"
                      href="http://www.example.com/data//top-video-plays-yesterday.csv"
                    >
                      Download the data
                      <svg
                        aria-hidden="true"
                        class="usa-icon margin-bottom-neg-05 margin-left-05"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlink:href="/assets/uswds/img/sprite.svg#file_present"
                        />
                      </svg>
                    </a>
                  </p>
                  <div />
                </section>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-labelledby="tab:r0:1"
        class="react-tabs__tab-panel"
        id="panel:r0:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r0:2"
        class="react-tabs__tab-panel"
        id="panel:r0:2"
        role="tabpanel"
      />
    </div>
  </section>
</DocumentFragment>
`;
